--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="/img/ontario.png">
+            <img class="portrait" src="/img/shawn.png">
         </div>
         {{>footer}}
     </body>
