--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Shawn. It uses data fron mapbox.com and weatherstack.com</p>
             <img class="portrait" src="/img/shawn.jpg">
         </div>
         {{>footer}}
